correct text align in project boxes

--- a/style.css
+++ b/style.css
@@ -240,6 +240,9 @@ h1{
     width: 300px;
     text-align: center;
     font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .project-pic{
     height: 200px;
